refactor: reduce complexity
